syntax = "proto3";

package jobs;

import "google/protobuf/timestamp.proto";

option go_package = "k8s-sandbox/internal/gen/proto";

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_IN_PROGRESS = 2;
  JOB_STATUS_DONE = 3;
  JOB_STATUS_FAILED = 4;
}

message Job {
  string client_id = 1;
  string job_id = 2;
  uint32 iterations = 3; // Number of iterations for fake CPU work
  JobStatus status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateJobRequest {
  string client_id = 1;
  uint32 iterations = 2;
}

message CreateJobResponse {
  Job job = 1;
}

message GetJobStatusRequest {
  string job_id = 1;
}

message GetJobStatusResponse {
  Job job = 1;
}

service JobService {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse);
}
